[package]
name = "fabled_nights"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.x86_64-unknown-linux-gnu]
# linker = "clang"
# rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9"

[dependencies.bevy]
version = "0.12.1"
default-features = false
features = [
    # --- Default features ---
    # "android_shared_stdcxx",# Enable using a shared stdlib for cxx on Android
    "animation",            # Enable animation support, and glTF animation loading
    "bevy_animation",       # Provides animation functionality
    "bevy_asset",           # Provides asset functionality
    # "bevy_audio",           # Provides audio functionality
    "bevy_core_pipeline",   # Provides cameras and other basic render pipeline features
    # "bevy_gilrs",           # Adds gamepad support
    "bevy_gizmos",          # Adds support for rendering gizmos
    "bevy_gltf",            # glTF support
    "bevy_pbr",             # Adds PBR rendering
    "bevy_render",          # Provides rendering functionality
    "bevy_scene",           # Provides scene functionality
    "bevy_sprite",          # Provides sprite functionality
    # "bevy_text",            # Provides text functionality
    # "bevy_ui",              # A custom ECS-driven UI framework
    "bevy_winit",           # winit window and input backend
    # "default_font",         # Include a default font, containing only ASCII characters, at the cost of a 20kB binary size increase
    # "hdr",                  # HDR image format support
    "ktx2",                 # KTX2 compressed texture support
    "multi-threaded",       # Enables multithreaded parallelism in the engine. Disabling it forces all engine tasks to run on a single thread.
    "png",                  # PNG image format support
    "tonemapping_luts",     # Include tonemapping Look Up Tables KTX2 files. If everything is pink, you need to enable this feature or change the Tonemapping method on your Camera2dBundle or Camera3dBundle.
    # "vorbis",               # OGG/VORBIS audio format support
    "webgl2",               # Enable some limitations to be able to use WebGL2. If not enabled, it will default to WebGPU in Wasm. Please refer to the WebGL2 and WebGPU section of the examples README for more information on how to run Wasm builds with WebGPU.
    "x11",                  # X11 display server support
    "zstd",                 # For KTX2 supercompression

    # --- Optional Features ---
    # "asset_processor",           # Enable built-in asset processor for processed assets.
    # "async-io",                  # Use async-io’s block_on implementation (preferred for applications using async-io).
    # "basis-universal",           # Basis Universal compressed texture support.
    # "bevy_ci_testing",           # Enable systems for automated testing on CI.
    # "bevy_dynamic_plugin",       # Plugin for dynamic loading (using libloading).
    # "bmp",                       # BMP image format support.
    # "dds",                       # DDS compressed texture support.
    # "debug_glam_assert",         # Enable assertions in debug builds to check parameter validity for glam.
    # "detailed_trace",            # Enable detailed trace event logging (compile-time opt-in required).
    "dynamic_linking",           # Force dynamic linking to improve iterative compile times.
    # "embedded_watcher",          # Enable in-memory asset providers for Bevy Asset hot-reloading.
    # "exr",                       # EXR image format support.
    # "file_watcher",              # Enable filesystem watching for Bevy Asset hot-reloading.
    # "flac",                      # FLAC audio format support.
    # "glam_assert",               # Enable assertions to check the validity of parameters passed to glam.
    # "jpeg",                      # JPEG image format support.
    # "minimp3",                   # MP3 audio format support (through minimp3).
    # "mp3",                       # MP3 audio format support.
    # "pbr_transmission_textures", # Enable support for transmission-related textures in StandardMaterial.
    # "pnm",                       # PNM image format support (includes pam, pbm, pgm, and ppm).
    "serialize",                 # Enable serialization support through serde.
    # "shader_format_glsl",        # Enable support for shaders in GLSL.
    # "shader_format_spirv",       # Enable support for shaders in SPIR-V.
    # "subpixel_glyph_atlas",      # Enable rendering of font glyphs using subpixel accuracy.
    # "symphonia-aac",             # AAC audio format support (through symphonia).
    # "symphonia-all",             # Support for AAC, FLAC, MP3, MP4, OGG/VORBIS, and WAV audio formats (through symphonia).
    # "symphonia-flac",            # FLAC audio format support (through symphonia).
    # "symphonia-isomp4",          # MP4 audio format support (through symphonia).
    # "symphonia-vorbis",          # OGG/VORBIS audio format support (through symphonia).
    # "symphonia-wav",             # WAV audio format support (through symphonia).
    # "tga",                       # TGA image format support.
    # "trace",                     # Tracing support.
    # "trace_chrome",              # Tracing support, saving a file in Chrome Tracing format.
    # "trace_tracy",               # Tracing support, exposing a port for Tracy.
    # "trace_tracy_memory",        # Tracing support, with memory profiling, exposing a port for Tracy.
    # "wav",                       # WAV audio format support.
    # "wayland",                   # Wayland display server support.
    # "webp",                      # WebP image format support.
    # "wgpu_trace",                # Save a trace of all wgpu calls.
    # "zlib",                      # For KTX2 supercompression.
]

# [dependencies.bevy_rapier3d]
# version = "0.23.0"